Assembly-Like Thing
Assembly like application programming API with the following commands:
jmp <line> - Jump to a line!
ret - Return to where you jumped from!
prnt <text> - Print some text
prntln <text> - Print a line of text.

--- a/UltimixOS/UltimixOS.csproj
+++ b/UltimixOS/UltimixOS.csproj
@@ -25,6 +25,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="NewFolder\**" />
+      <EmbeddedResource Remove="NewFolder\**" />
+      <None Remove="NewFolder\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Cosmos.Build" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.Debug.Kernel" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.System2" Version="0-*" NoWarn="NU1604" />
