Added VERY basic file structure verification.
Verifies structure of:
0:\Ultimix
0:\Ultimix\bin
0:\Ultimix\usr

--- a/UltimixOS/UltimixOS.csproj
+++ b/UltimixOS/UltimixOS.csproj
@@ -25,12 +25,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="NewFolder\**" />
-      <EmbeddedResource Remove="NewFolder\**" />
-      <None Remove="NewFolder\**" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Cosmos.Build" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.Debug.Kernel" Version="0-*" NoWarn="NU1604" />
         <PackageReference Include="Cosmos.System2" Version="0-*" NoWarn="NU1604" />
@@ -38,6 +32,7 @@
 
     <ItemGroup>
       <Folder Include="IntegratedApps\" />
+      <Folder Include="SysbuiltinLibs\" />
     </ItemGroup>
 
 </Project>
